syntax = "proto3";

option csharp_namespace = "meterReader.gRPC";

// The greeting service definition.
service MeterReaderService {
  // Sends a greeting
  rpc AddReading (ReadingPacket) returns (StatusMessage);
}

message ReadingPacket{
  repeated ReadingMessage Readings= 1;
  ReadingStatus Successful= 2;
}

// The request message containing the user's name.
message ReadingMessage {
  int32 CustomerId = 1;
  int32 ReadingValue = 2;
  string Notes = 3;
  reserved 4;
  reserved 'Successful';
}

// The response message containing the greetings.
message StatusMessage {
  ReadingStatus Success = 1;
  string Message= 2;
}

enum ReadingStatus{
  Unknown = 0;
  Success = 1;
  Failure = 2;

}